@@ -11,6 +11,7 @@
 - Server housekeeping process performance optimization
 - Added driver for Qtech OLT switches
 - New agent parameter FileSystem.Type(*)
+- New agent parameters Net.Resolver.AddressByName(*) and Net.Resolver.NameByAddress(*)
 - Management console:
 	- Fixed broken popup menu actions on "Interfaces" tab
 	- Macro %USERNAME%4 can be used in object tools
